fix: better icon alignment in work units

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,6 +60,10 @@ li {
 	margin: 0;
 }
 
+span {
+	line-height: normal;
+}
+
 .label {
 	font-size: 1.2rem;
 	text-transform: uppercase;
